# erpnext-lite-ops

./: README.md  pyproject.toml
erpnext-lite-operations-ui-for-multi/: MANIFEST.in  README.md
erpnext-lite-operations-ui-for-multi/erpnext_lite_ops/: constants.py  hooks.py
erpnext-lite-operations-ui-for-multi/erpnext_lite_ops/public/js/: lite_ops_boot.js
erpnext-lite-operations-ui-for-multi/erpnext_lite_ops/public/js/forms/: item.js  purchase_order.js
erpnext-lite-operations-ui-for-multi/erpnext_lite_ops/public/js/lists/: purchase_invoice_list.js  (+5 more)
erpnext_lite_ops/: api.py  constants.py  hooks.py  install.py  permissions.py
erpnext_lite_ops/lite_operations/page/lite_operations/: lite_operations.js  lite_operations.json
erpnext_lite_ops/public/css/: lite_ops.css
erpnext_lite_ops/public/js/: lite_ops_boot.js
erpnext_lite_ops/public/js/forms/: customer.js  delivery_note.js  purchase_reciept.js  purchase_taxes_and_charges_template.js  quotation.js  sales_invoice.js  sales_order.js  sales_taxes_and_charges_template.js  supplier.js
erpnext_lite_ops/public/js/lists/: delivery_note_list.js  purchase_order_list.js  purchase_receipt_list.js  purchase_taxes_and_charges_template_list.js  sales_invoice_list.js  sales_order_list.js  sales_taxes_and_charges_template_list.js
i-want-to-make-a-custom/: README.md
i-want-to-make-a-custom/erpnext_lite_ops/: api.py  constants.py  hooks.py  install.py  modules.txt  permissions.py
i-want-to-make-a-custom/erpnext_lite_ops/public/css/: lite_ops.css
i-want-to-make-a-custom/erpnext_lite_ops/public/js/: lite_ops_boot.js
(+8 files in other folders)
