[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_lite_ops"
version = "0.1.0"
description = "Simplified multi-company ERPNext operations UI built on standard doctypes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "MO"}
]
dependencies = [
  "frappe~=16.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["erpnext_lite_ops*"]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
